--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -7,14 +7,35 @@
     android:background="@drawable/background"
     tools:context=".Registration">
 
-    <EditText
-        android:id="@+id/et_f_name_reg"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Registration"
+        android:textColor="#DBD6D6"
+        android:textSize="24"
+        app:fontFamily="@font/carter_one"
+        app:layout_constraintBottom_toTopOf="@+id/et_f_name_reg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et_f_name_reg"
+        android:layout_width="297dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="152dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/edit_view"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/et_f_name_reg"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,12 +44,14 @@
 
     <EditText
         android:id="@+id/et_l_name_reg"
-        android:layout_width="223dp"
-        android:layout_height="wrap_content"
+        android:layout_width="297"
+        android:layout_height="67"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/edit_view"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/et_l_name_reg"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,12 +60,14 @@
 
     <EditText
         android:id="@+id/et_email_reg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="297"
+        android:layout_height="67"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/edit_view"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/et_email_reg"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
@@ -51,12 +76,14 @@
 
     <EditText
         android:id="@+id/et_password_reg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="297"
+        android:layout_height="67"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/edit_view"
         android:ems="10"
+        android:gravity="center"
         android:hint="@string/et_password_reg"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,11 +92,12 @@
 
     <Button
         android:id="@+id/btn_to_regist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="247dp"
+        android:layout_height="47dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:background="@android:color/transparent"
         android:text="@string/btn_to_regist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
