--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -22,11 +22,13 @@
 
     <ListView
         android:id="@+id/lv_menu"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="336dp"
+        android:layout_height="593dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="104dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="parent" />
 
