--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -99,6 +99,7 @@
         android:layout_marginEnd="8dp"
         android:background="@android:color/transparent"
         android:text="@string/btn_to_regist"
+        android:textColor="#DBD6D6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_password_reg" />
