--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -146,16 +146,17 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="53dp"
-        android:layout_height="66dp"
+        android:layout_width="55dp"
+        android:layout_height="57dp"
         android:layout_marginStart="4dp"
         android:layout_marginLeft="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline8"
+        app:layout_constraintTop_toTopOf="@+id/guideline10"
         app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
 
     <android.support.constraint.Guideline
