--- a/app/src/main/res/layout/activity_add_job.xml
+++ b/app/src/main/res/layout/activity_add_job.xml
@@ -4,21 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddJob">
+    android:background="@drawable/background"
+    tools:context=".AddJob" >
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <EditText
+        android:id="@+id/et_f_name_reg"
+        android:layout_width="297dp"
+        android:layout_height="67dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Add Job"
+        android:background="@drawable/edit_view"
+        android:ems="10"
+        android:gravity="center"
+        android:hint="@string/et_f_name_reg"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.19999999" />
 </android.support.constraint.ConstraintLayout>
